--- a/spa/public/index.html
+++ b/spa/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Wo bleibt mein Bus?</title>
+    <script type="text/javascript" src="<%= BASE_URL %>env-config.js"></script>
   </head>
   <body>
     <noscript>
