--- a/spa/public/index.html
+++ b/spa/public/index.html
@@ -15,5 +15,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.css" rel="stylesheet">
   </body>
 </html>
