--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -38,5 +38,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <noscript><img src="https://pigeon.ju60.de/ingress/14450baf-6883-4d3f-a6b9-558e7914628e/pixel.gif"></noscript>
+    <script src="https://pigeon.ju60.de/ingress/14450baf-6883-4d3f-a6b9-558e7914628e/script.js"></script>
   </body>
 </html>
