--- a/packages/backend/home.html
+++ b/packages/backend/home.html
@@ -30,6 +30,15 @@ window.onload = function () {
 
     if (window["WebSocket"]) {
         conn = new WebSocket("ws://" + document.location.host + "/ws");
+        conn.onopen = function (evt) {
+            var item = document.createElement("div");
+            item.innerHTML = "<b>Connecting ...</b>";
+            appendLog(item);
+            conn.send(JSON.stringify({
+                __type: 'auth',
+                data: 'huhu',
+            }));
+        };
         conn.onclose = function (evt) {
             var item = document.createElement("div");
             item.innerHTML = "<b>Connection closed.</b>";
