--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kiel-Live</title>
     <!-- <script type="" src="/api/web-config.js"></script> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#2c3e50">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Kiel Live"
+    ><link rel="apple-touch-icon" href="/img/icons/apple-touch-icon.png">
+    <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#2c3e50">
+    <meta name="msapplication-TileImage" content="/img/icons/mstile-150x150.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- <noscript><img src="https://pigeon.ju60.de/ingress/14450baf-6883-4d3f-a6b9-558e7914628e/pixel.gif"></noscript>
+    <script src="https://pigeon.ju60.de/ingress/14450baf-6883-4d3f-a6b9-558e7914628e/script.js"></script> -->
   </body>
 </html>
