--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kiel-Live</title>
+    <meta name="description" content="Wo bleibt mein Bus?">
     <!-- <script type="" src="/api/web-config.js"></script> -->
     <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
-    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#2c3e50" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
