style: fix formatting

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kiel-Live</title>
-    <meta name="description" content="Wo bleibt mein Bus?">
+    <meta name="description" content="Wo bleibt mein Bus?" />
     <!-- <script type="" src="/api/web-config.js"></script> -->
     <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
