--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kiel-Live</title>
     <meta name="description" content="Wo bleibt mein Bus?" />
-    <!-- <script type="" src="/api/web-config.js"></script> -->
     <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
     <meta name="theme-color" content="#2c3e50" />
