chore: rename tracking script

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
       async
       defer
       data-website-id="69027ced-fbe3-442f-8d15-91d499836034"
-      src="https://boomerang.ju60.de/umami.js"
+      src="https://boomerang.ju60.de/main.js"
       data-do-not-track="true"
       data-domains="kiel-live.github.io"
     ></script>
