--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#2c3e50" />
     <meta name="msapplication-TileImage" content="/img/icons/mstile-150x150.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light" />
     <script
       async
       defer
