--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
     <meta name="theme-color" content="#2c3e50" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Kiel Live" />
     <link rel="apple-touch-icon" href="/img/icons/apple-touch-icon.png" />
