--- a/app/public/404.html
+++ b/app/public/404.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Redirecting...</title>
     <script>
-        // Store the path (no host to prevent redirect spoofing) and redirect to index.html
-        sessionStorage.setItem('redirect', location.pathname + location.search);
+      // Store the path (no host to prevent redirect spoofing) and redirect to index.html
+      sessionStorage.setItem('redirect', location.pathname + location.search);
     </script>
-    <meta http-equiv="refresh" content="0;URL='/index.html'">
-</head>
+    <meta http-equiv="refresh" content="0;URL='/index.html'" />
+  </head>
 </html>
