--- a/app/public/404.html
+++ b/app/public/404.html
@@ -9,4 +9,7 @@
     </script>
     <meta http-equiv="refresh" content="0;URL='/'" />
   </head>
+  <body>
+    <a href="/">Click here if you are not redirected.</a>
+  </body>
 </html>
