--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
       data-website-id="69027ced-fbe3-442f-8d15-91d499836034"
       src="https://boomerang.ju60.de/main.js"
       data-do-not-track="true"
-      data-domains="kiel-live.github.io"
+      data-domains="kiel-live.github.io,kiel.flott-live.de"
     ></script>
   </head>
   <body>
