fix: use standard safe-area-inset-* variables and allow scrolling when keyboard is open

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Kiel-Live</title>
     <meta name="description" content="Wo bleibt mein Bus?" />
     <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
